# my-favorite-code-segment

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  jest.config.js  lerna.json  package.json  sitemap.xml  tsconfig.eslint.json  tsconfig.json
assets/css/: styles.25274f87.css  styles.40fa4e7c.css  styles.fe77ab2a.css
assets/js/: 0e384e19.0f8d4e57.js  0e384e19.233be04f.js  0e384e19.29cfa4ac.js  0e384e19.3480c64d.js  0e384e19.5be30b1a.js  0e384e19.5f2215dc.js  0e384e19.6a1cb566.js  0e384e19.6fe9f31b.js  0e384e19.78141087.js  0e384e19.a1431d5d.js  0e384e19.b5c19ccc.js  0e384e19.f0c06ac3.js  1121db97.01aee11f.js  1121db97.38e1182d.js  1121db97.4df86f84.js  1121db97.5dfd7c11.js  1121db97.6af2eb01.js  1121db97.6bcf2bf3.js  1121db97.7108e221.js  1121db97.7ad2c15f.js  1121db97.bcd72cff.js  1121db97.ccbc6040.js  1121db97.cee72576.js  1121db97.d1d02241.js  1121db97.fc38599a.js  17896441.4cd5f1ed.js  1855149a.6cae85ca.js  1855149a.7f8e3550.js  1855149a.95341b63.js  1855149a.9a8caf7f.js  1855149a.a91744e3.js  1855149a.d983142f.js  18b71219.48a59d6c.js  18b71219.ac9383e1.js  18b71219.b8ec1856.js  18b71219.d506beba.js  18c41134.69f351a0.js  1d1d049f.deb9e4e3.js  1d818ec8.6036c551.js  1df93b7f.0013e78f.js  (+218 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/tags/: index.html
blog/tags/docusaurus/: index.html
blog/tags/facebook/: index.html
blog/tags/hello/: index.html
blog/tags/hola/: index.html
blog/welcome/: index.html
blog/当一线技术管理这一年/: index.html
blog/当技术Leader的这一年/: index.html
blog/聊绩效是聊什么/: index.html
docs/: README.md  docusaurus.config.js  package.json
docs/CPP学习/二小时熟悉CPP/: index.html
docs/blog/: 2021-11-7.md  authors.yml
docs/docs/: intro.md
docs/docs/数学/: 函数.md
docs/intro/: index.html
lists/src/: second.rs
markdown-page/: index.html
rreact/: Cargo.toml
rreact/core/: Cargo.toml
rreact/test/: Cargo.toml
rust-demo/debug-swc/: Cargo.toml
rust-demo/debug-swc/src/: main.rs
rust-demo/mini-dioxus/: Cargo.toml
rust-demo/rust-note/: Cargo.toml
rust-demo/xui/: Cargo.toml
rust-demo/xui/learn-trait/: Cargo.toml
rust-demo/xui/learn-trait/src/: lib.rs
rust-demo/xui/xmath/: Cargo.toml
rust-demo/xui/xmath/src/: lib.rs  pos2.rs
(+79 files in other folders)
