[package]
name = "debug-swc"
version = "0.1.0"
edition = "2021"


[dependencies]
either = { version = "1.4" }
enum_kind = { version = "0.2.1", path = "enum_kind" }
lexical = { version = "6.1.0", features = ["power-of-two"] }
num-bigint = "0.4"
serde = { version = "1", features = ["derive"] }
smallvec = "1.8.0"
swc_atoms = { version = "0.2.3", path = "swc_atoms" }
swc_common = { version = "0.18.0", path = "swc_common" }
swc_ecma_ast = { version = "0.78.0", path = "swc_ecma_ast" }
swc_ecma_visit = { version = "0.64.0", path = "swc_ecma_visit", optional = true }
swc_ecma_parser = { version = "0.104.2", path = "swc_ecma_parser" }
tracing = "0.1.32"
typed-arena = "2.0.1"