[package]
name = "xmath"
version = "0.1.0"
include = [
  "**/*.rs",
  "Cargo.toml",
]

[package.metadata.docs.rs]
all-features = true

[lib]


[features]
default = []

# Enable additional checks if debug assertions are enabled (debug builds).
extra_debug_asserts = []
# Always enable additional checks.
extra_asserts = []


[dependencies]
bytemuck = { version = "1.7.2", optional = true, features = ["derive"] }
mint = { version = "0.5.6", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }